--- a/htmlproject-4/style.css
+++ b/htmlproject-4/style.css
@@ -1,12 +1,7 @@
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-}
-
 body{
-    
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    text-align: center;    
 }
 
 .main-bx{
@@ -25,6 +20,12 @@ table{
 
 tr, td{
     border: 1px solid black;
+}
+
+th{
+    height: 150px;
+    width: 100%;
+    color: white;
 }
 
 .bx-3{
