--- a/htmlproject-13-position-property/style.css
+++ b/htmlproject-13-position-property/style.css
@@ -47,6 +47,7 @@
 .tabs {
     display: inline-block;
     margin: 0 10px;
+    cursor: pointer;
 }
 
 .tabs:hover {
@@ -95,7 +96,7 @@
     /* background-color: rgba(233, 233, 233, 0.61); */
     border-radius: 50px;
     box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, 0.479);
-    /* backdrop-filter: blur(.3rem); */
+    backdrop-filter: blur(.3rem);
     
     position: absolute;
     right: 90px;
