--- a/htmlproject-12/style.css
+++ b/htmlproject-12/style.css
@@ -165,7 +165,7 @@
 .third-photos-contener {
     /* border: 1px solid red; */
     /* width: 100%; */
-    height: 300vh;
+    height:auto;
 
 }
 
@@ -205,23 +205,24 @@ h2 {
 .photos-show-bx {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: ;
-    grid-auto-rows: ;
     gap: 1rem;
-    
+}
 
+.col-1, .col-2, .col-3{
+    /* border: 2px solid black; */
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    
-
 }
 
 
+
 .card {
-    border: 1px solid red;
-    /* border-radius: 1rem; */
+    /* border: 1px solid red; */
+    border-radius: 1rem;
     overflow: hidden;
+    margin-bottom: 1rem;
+    box-shadow: 0 0 10px 1px rgb(122, 122, 122);
     
 }
 
@@ -233,6 +234,6 @@ h2 {
 .ftr-page {
     width: 100%;
     height: 50px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     text-align: center;
 }
